<resources>
    <string name="app_name">DexWorks</string>
    <string name="action_settings">Settings</string>
    <string name="title_browse">Browse</string>
    <string name="title_projects">Projects</string>
    <string name="not_yet_implemented">Not yet implemented</string>
    <string name="search_placeholder">Search apps and APKs…</string>
    <string name="cd_alphabet_index">Fast scroll</string>
    <string name="sample_app_1_name">Calculator Pro</string>
    <string name="sample_app_1_package">com.example.calculator</string>
    <string name="sample_app_1_details">v2.4.1 • 14.2 MB</string>
    <string name="sample_app_2_name">FileManager Plus</string>
    <string name="sample_app_2_package">com.example.filemanager</string>
    <string name="sample_app_2_details">v1.1.0 • 8.7 MB</string>
    <string name="sample_app_3_name">Pixel Arcade</string>
    <string name="sample_app_3_package">com.example.pixelarcade</string>
    <string name="sample_app_3_details">v3.0.2 • 45.1 MB</string>
    <string name="sample_app_4_name">Audio Streamer</string>
    <string name="sample_app_4_package">com.example.audiostreamer</string>
    <string name="sample_app_4_details">v1.8.5 • 22.0 MB</string>
    <string name="sample_app_5_name">Web Navigator</string>
    <string name="sample_app_5_package">com.example.webnav</string>
    <string name="sample_app_5_details">v4.1.0 • 18.9 MB</string>
    <string name="sample_app_6_name">Notes &amp; Tasks</string>
    <string name="sample_app_6_package">com.example.notes</string>
    <string name="sample_app_6_details">v2.0.0 • 6.4 MB</string>
    <string name="projects_empty_title">No Projects</string>
    <string name="projects_empty_subtitle">Decompiled APKs and saved workspaces will appear here</string>
    <string name="action_open_file">Import APK…</string>
    <string name="cd_add_project">Create project</string>
    <string name="wizard_project_title">New project</string>
    <string name="title_project_options">Project options</string>
    <string name="project_options_app_details">App details</string>
    <string name="project_options_app_details_desc">View package information and components</string>
    <string name="project_options_decompile">Decompile</string>
    <string name="project_options_decompile_desc">Turn DEX files into readable source</string>
    <string name="project_options_apk_browse">APK browse</string>
    <string name="project_options_apk_browse_desc">Browse the contents of the APK</string>
    <string name="project_options_manifest_viewer">Manifest viewer</string>
    <string name="project_options_manifest_viewer_desc">Inspect the decoded AndroidManifest.xml</string>
    <string name="project_options_no_apk">Import an APK to enable project actions.</string>
    <string name="title_apk_browse">APK browse</string>
    <string name="apk_browse_root">APK root</string>
    <string name="apk_browse_empty">This folder is empty</string>
    <string name="apk_browse_error">Could not read this APK</string>
    <string name="title_xml_viewer">Text Viewer</string>
    <string name="title_hex_viewer">Hex Viewer</string>
    <string name="error_loading_xml">Could not decode this XML file</string>
    <string name="error_loading_hex">Could not read this file</string>
    <string name="hex_info">%1$s</string>
    <string name="hex_info_truncated">%1$s • showing first %2$s</string>
    <string name="hex_range">%1$s – %2$s of %3$s</string>
    <string name="hex_selection">Offset %1$s • %2$s%3$s</string>
    <string name="hex_no_selection">Tap a byte to inspect it</string>
    <string name="hex_page">Page %1$d of %2$d</string>
    <string name="apk_browse_save_to">Save to…</string>
    <string name="apk_image_page_indicator">%1$d of %2$d</string>
    <string name="apk_browse_save_failed">Could not save this file</string>
    <string name="apk_browse_root_label">%1$s.apk</string>
    <string name="hex_prev_page">Previous</string>
    <string name="hex_next_page">Next</string>
    <string name="hex_prev_byte">Previous byte</string>
    <string name="hex_next_byte">Next byte</string>
    <string name="hex_sheet_summary">%1$s  %2$s%3$s</string>
    <string name="hex_detail_decimal">Decimal: %1$d</string>
    <string name="hex_detail_hex">Hex: %1$s</string>
    <string name="hex_detail_octal">Octal: %1$s</string>
    <string name="hex_detail_binary">Binary: %1$s</string>
    <string name="hex_detail_character">Character: %1$s</string>
    <string name="hex_detail_not_printable">(not printable)</string>
    <string name="hex_detail_bits">Bits set: %1$d</string>
    <string name="hex_detail_position">Position: row %1$d, column %2$d</string>
    <string name="hex_detail_page">Page: %1$d of %2$d</string>
    <string name="hex_detail_total">File size: %1$s</string>
    <string name="apk_browse_binary_message">Size: %1$s\nPath: %2$s\n\nThis file type does not have a text preview.</string>
    <string name="apk_browse_entry_menu">File options</string>
    <string name="apk_browse_preview">Open</string>
    <string name="apk_browse_copy_path">Copy path</string>
    <string name="apk_browse_share_entry">Share…</string>
    <string name="apk_browse_file_info">Details…</string>
    <string name="apk_browse_share">Share APK entry</string>
    <string name="apk_browse_copied">Path copied</string>
    <string name="apk_browse_info_message">Type: %1$s\nSize: %2$s\nPath: %3$s\nCompressed: %4$s\nCompression: %5$s\nCRC-32: %6$s\nModified: %7$s\nViewer: %8$s</string>
    <string name="apk_browse_info_folder">Folder\nPath: %1$s</string>
    <string name="apk_info_unknown">Unknown</string>
    <string name="apk_info_viewer_xml">XML viewer</string>
    <string name="apk_info_viewer_text">Text viewer</string>
    <string name="apk_info_viewer_hex">Hex viewer</string>
    <string name="apk_info_viewer_image">Image viewer</string>
    <string name="title_apk_image_viewer">Image Viewer</string>
    <string name="viewer_options">Options</string>
    <string name="viewer_share">Share…</string>
    <string name="viewer_save_to">Save to…</string>
    <string name="viewer_copy_image">Copy image</string>
    <string name="viewer_copy_text">Copy text</string>
    <string name="viewer_unobfuscate">Unobfuscate</string>
    <string name="viewer_prettify">Prettify</string>
    <string name="viewer_format_json">Format JSON</string>
    <string name="action_uninstall_app">Uninstall app</string>
    <string name="confirm_uninstall_title">Uninstall %1$s?</string>
    <string name="confirm_uninstall_message">This will remove the app and all of its data from this device.</string>
    <string name="confirm_uninstall_positive">Uninstall</string>
    <string name="uninstall_failed">Could not uninstall the app</string>
    <string name="uninstall_no_launcher">This app cannot be uninstalled from here</string>
    <string name="viewer_transform_applied">%1$s applied</string>
    <string name="viewer_no_changes">Nothing to change</string>
    <string name="viewer_unobfuscate_summary">%1$d strings resolved from %2$d arrays, %3$d expressions folded</string>
    <string name="viewer_details">Details</string>
    <string name="viewer_copied">Copied to clipboard</string>
    <string name="viewer_save_failed">Could not save this file</string>
    <string name="error_loading_image">Could not load this image</string>
    <string name="apk_browse_sort">Sort</string>
    <string name="apk_browse_options">Options</string>
    <string name="apk_browse_folders_first">Folders first</string>
    <string name="apk_browse_sort_name">Name</string>
    <string name="apk_browse_sort_size">Size</string>
    <string name="apk_browse_sort_type">Type</string>
    <string name="apk_browse_sort_date">Date modified</string>
    <string name="apk_browse_sheet_meta">%1$s • %2$s</string>
    <string name="apk_browse_share_failed">Could not share this entry</string>
    <string name="apk_entry_type_folder">Folder</string>
    <string name="apk_entry_type_file">File</string>
    <string name="apk_entry_type_archive">Archive</string>
    <string name="apk_entry_type_dex">DEX file</string>
    <string name="apk_entry_type_xml">XML file</string>
    <string name="apk_entry_type_json">JSON file</string>
    <string name="apk_entry_type_image">Image</string>
    <string name="apk_entry_type_native">Native library</string>
    <string name="apk_entry_type_text">Text file</string>
    <string name="wizard_step">Step %1$d of %2$d</string>
    <string name="wizard_name_title">Name your project</string>
    <string name="wizard_name_subtitle">Choose a name that describes what you are working on.</string>
    <string name="wizard_project_name_hint">Project name</string>
    <string name="wizard_name_required">Enter a project name</string>
    <string name="wizard_continue">Continue</string>
    <string name="wizard_back">Back</string>
    <string name="wizard_create">Create project</string>
    <string name="wizard_icon_title">Choose an icon</string>
    <string name="wizard_icon_subtitle">Pick a visual identity for this project.</string>
    <string name="wizard_choose_icon">Choose icon</string>
    <string name="wizard_use_apk_icon">Use the APK icon for this project</string>
    <string name="wizard_import_title">Import an APK</string>
    <string name="wizard_choose_apk">Choose APK</string>
    <string name="wizard_apk_not_selected">No APK chosen</string>
    <string name="wizard_apk_selected">%1$s</string>
    <string name="wizard_project_created">Project created</string>
    <string name="wizard_create_failed">Could not create the project</string>
    <string name="wizard_icon_picker_title">Choose project icon</string>
    <string name="wizard_confirm_icon">Confirm icon</string>
    <string name="wizard_icon_search_hint">Search icons</string>
    <string name="wizard_icon_search_empty">No icons match your search</string>
    <string name="project_icon_folder">Folder</string>
    <string name="project_icon_folder_filled">Filled folder</string>
    <string name="project_icon_app">App</string>
    <string name="project_icon_decompile">Decompile</string>
    <string name="project_icon_disassemble">Disassemble</string>
    <string name="project_icon_extract">Extract</string>
    <string name="project_icon_manifest">Manifest</string>
    <string name="project_icon_security">Security</string>
    <string name="project_icon_widgets">Widgets</string>
    <string name="project_icon_settings">Settings</string>
    <string name="loading_apps">Loading applications…</string>
    <string name="action_save_apk_to">Save APK to…</string>
    <string name="action_import_as_project">Import as project…</string>
    <string name="action_retry">Try again</string>
    <string name="action_inspect_manifest">Inspect manifest</string>
    <string name="action_save_manifest">Save</string>
    <string name="action_copy_manifest">Copy all</string>
    <string name="action_copy_range">Copy line range…</string>
    <string name="action_share_manifest">Share</string>
    <string name="action_inspect_activities">Inspect activities</string>
    <string name="title_activity_inspector">Activity Inspector</string>
    <string name="badge_exported">Exported</string>
    <string name="badge_alias">Alias</string>
    <string name="badge_launcher">Launcher</string>
    <string name="empty_activities_title">No activities found</string>
    <string name="empty_activities_subtitle">No activity components declared</string>
    <string name="error_activities_title">Could not load activities</string>
    <string name="error_activities_subtitle">The manifest could not be read</string>
    <string name="search_activities_hint">Search activities…</string>
    <string name="filter_activities_all">All</string>
    <string name="filter_has_intent_filters">Has intent filters</string>
    <string name="action_select_all">Select all</string>
    <string name="settings_word_wrap">Word wrap</string>
    <string name="apk_browse_analyze">Analyze</string>
</resources>