<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_sort_group"
        android:title="@string/apk_browse_sort"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_sort_name"
                    android:checked="true"
                    android:title="@string/apk_browse_sort_name" />
                <item
                    android:id="@+id/action_sort_size"
                    android:title="@string/apk_browse_sort_size" />
                <item
                    android:id="@+id/action_sort_type"
                    android:title="@string/apk_browse_sort_type" />
                <item
                    android:id="@+id/action_sort_date"
                    android:title="@string/apk_browse_sort_date" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/action_folders_first"
        android:checkable="true"
        android:checked="true"
        android:title="@string/apk_browse_folders_first"
        app:showAsAction="never" />
</menu>
